--- a/app/src/style.css
+++ b/app/src/style.css
@@ -5,11 +5,11 @@
   --primary-blue: #0066ff;
   --primary-blue-opacity: #0066ff33;
   --primary-blue-glow: rgba(0, 102, 255, 0.5);
-  --card-bg: #10141d;
+  --card-bg: #090e1b;
   --card-border: #41434a;
   --card-header: #181e2b;
   --faded: rgba(255, 255, 255, 0.7);
-  --secondary-btn: #151727;
+  --secondary-btn: #070d17;
   --secondary-text: #d1d5db;
   --green: #3bff00;
   --red: #ee4443;
@@ -125,9 +125,10 @@ body {
 .secondary-btn {
   transition:
     color 0.2s ease,
-    border 0.2 ease,
-    border-radius 0.2 ease;
-  border-radius: var(--custom-border-radius);
+    border 0.2s ease,
+    border-radius 0.2s ease,
+    box-shadow 0.2s ease;
+  border-radius: 12px; /* ou use sua var: var(--custom-border-radius) */
   background-color: var(--secondary-btn);
   color: var(--foreground);
   border: 1px solid var(--card-border);
@@ -135,14 +136,19 @@ body {
   text-decoration: none;
   white-space: nowrap;
   font-weight: bold;
+
+  box-shadow:
+    inset 0 0 2px rgba(255, 255, 255, 0.05),
+    0 1px 3px rgba(255, 255, 255, 0.05); /* sombra leve interna + externa */
 }
 
 .secondary-btn:hover {
-  filter: brightness(125%);
-  scale: 1.02;
+  filter: brightness(115%);
+  transform: scale(1.03);
   box-shadow:
-    0 0 10px var(--secondary-btn),
-    0 0 20px var(--secondary-btn);
+    inset 0 0 2px rgba(255, 255, 255, 0.08),
+    0 0 8px rgba(0, 123, 255, 0.3),
+    0 0 12px rgba(0, 123, 255, 0.2);
 }
 
 .animated-section {
