--- a/app/src/style.css
+++ b/app/src/style.css
@@ -11,6 +11,8 @@
   --faded: rgba(255, 255, 255, 0.7);
   --secondary-btn: #070d17;
   --secondary-text: #d1d5db;
+  --secondary-shadow-bottom: rgba(0, 0, 0, 0.25);
+  --secondary-glow-top: #131723;
   --green: #3bff00;
   --red: #ee4443;
   --glass-card: rgba(255, 255, 255, 0.1);
@@ -28,6 +30,9 @@
   --custom-faded: #777777;
   --custom-hover: #0097a7;
   --custom-highlight: #1f2937;
+  --secondary-shadow-bottom: rgba(0, 0, 0, 0.15);
+  --secondary-glow-top: #d0d8e8;
+  --secondary-btn: #d9e3f3;
   --green: #3bff00;
   --red: #ee4443;
 }
@@ -123,23 +128,22 @@ body {
 }
 
 .secondary-btn {
-  transition:
-    color 0.2s ease,
-    border 0.2s ease,
-    border-radius 0.2s ease,
-    box-shadow 0.2s ease;
-  border-radius: 12px; /* ou use sua var: var(--custom-border-radius) */
   background-color: var(--secondary-btn);
   color: var(--foreground);
+  font-weight: bold;
+  border-radius: var(--custom-border-radius);
   border: 1px solid var(--card-border);
   cursor: pointer;
-  text-decoration: none;
   white-space: nowrap;
-  font-weight: bold;
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  transition:
+    filter 0.2s ease,
+    transform 0.2s ease;
 
   box-shadow:
-    inset 0 0 2px rgba(255, 255, 255, 0.05),
-    0 1px 3px rgba(255, 255, 255, 0.05); /* sombra leve interna + externa */
+    2px 4px 4px 2px var(--secondary-shadow-bottom),
+    -3px -3px 10px 3px var(--secondary-glow-top);
 }
 
 .secondary-btn:hover {
@@ -147,8 +151,8 @@ body {
   transform: scale(1.03);
   box-shadow:
     inset 0 0 2px rgba(255, 255, 255, 0.08),
-    0 0 8px rgba(0, 123, 255, 0.3),
-    0 0 12px rgba(0, 123, 255, 0.2);
+    0 0 8px var(--primary-blue-glow),
+    0 0 12px var(--primary-blue-opacity);
 }
 
 .animated-section {
